# FlashMQ

./: .build-ci.sh  .clang-format  .get-os-codename-and-stamp.sh  .gitignore  .travis.yml  CMakeLists.shared  CMakeLists.txt  Dockerfile  Dockerfile.buildx  LICENSE  README.md  acksender.cpp  acksender.h  acltree.cpp  acltree.h  authplugin.cpp  authplugin.h  backgroundworker.cpp  backgroundworker.h  bindaddr.cpp  bindaddr.h  bridgeconfig.cpp  bridgeconfig.h  bridgeinfodb.cpp  bridgeinfodb.h  build.sh  bytestopacketparser.cpp  bytestopacketparser.h  checkedsharedptr.h  checkeduniqueptr.h  checkedweakptr.h  cirbuf.cpp  cirbuf.h  client.cpp  client.h  clientacceptqueue.cpp  clientacceptqueue.h  configfileparser.cpp  configfileparser.h  derivablecounter.cpp  (+141 more)
.github/workflows/: building.yml  codestyle.yml  docker.yml  linting.yml  testing.yml  testing_non_sse.yml
FlashMQTests/: CMakeLists.txt  FlashMQTests.pro  FlashMQTestsMeta.pro  bridgeprefixtests.cpp  conffiletemp.cpp  conffiletemp.h  configtests.cpp  dnstests.cpp  filecloser.cpp  filecloser.h  flashmqtempdir.cpp  flashmqtempdir.h  fmq-generate-core-file.py  main.cpp  mainappasfork.cpp  mainappasfork.h  mainappinthread.cpp  mainappinthread.h  mainappthread.cpp  mainappthread.h  maintests.cpp  maintests.h  plugintests.cpp  retaintests.cpp  run-make-from-ci.sh  run-tests-from-ci.sh  save-core-on-sigvtalrm.gdb  sharedsubscriptionstests.cpp  show-frames-on-hook.pdb.py  subscriptionidtests.cpp  testhelpers.cpp  testhelpers.h  testinitializer.cpp  testinitializer.h  tst_maintests.cpp  tst_maintests.h  twoclienttestcontext.cpp  twoclienttestcontext.h  utiltests.cpp  websockettests.cpp  (+1 more)
FlashMQTests/plugins/: curlfunctions.cpp  curlfunctions.h  test_plugin.cpp  test_plugin.h  test_plugin.pro
debian/: conffiles  flashmq.service  postinst  postrm  preinst  prerm
edlib/: README
examples/plugin_libcurl/: CMakeLists.txt  LICENSE  README.md  authenticatingclient.cpp  authenticatingclient.h  build.sh  curl_functions.cpp  curl_functions.h  plugin_libcurl.cpp  pluginstate.cpp  pluginstate.h
examples/plugin_libcurl/src/: authenticatingclient.cpp  curl_functions.cpp  curl_functions.h  plugin_libcurl.cpp  pluginstate.cpp  pluginstate.h
fuzz-persistent/: .gitignore  README.md  fuzz-helper.sh
fuzz-persistent/targets/: cirbuf__write.cpp  mqttpacket__bufferToMqttPackets.cpp  threadlocalutils__isValidUtf8.cpp  threadlocalutils__splitTopic.cpp  utils__base64Encode.cpp
man/: .gitignore  Makefile  README.md  flashmq-docbook5-refentry-to-html5.xsl  flashmq-docbook5-refentry-to-manpage.xsl  flashmq.1  flashmq.1.dbk5  flashmq.1.html  flashmq.conf.5  flashmq.conf.5.dbk5  flashmq.conf.5.html  flashmq.vim  refentry.colophon.dbk5  reference.dbk5
man/db5to4/: copy.xsl  db5to4-core.xsl  db5to4-info.xsl  db5to4-withinfo.xsl
man/docbook5-refentry-xslt/: docbook5-refentry-to-html5.xsl  docbook5-refentry-to-manpage.xsl
man/docbook5-to-html5/: docbook5-to-html5.xsl
man/vim/: syntax.generate.sh  syntax.template.vim
